--- a/src/Components/MovieDetails.css
+++ b/src/Components/MovieDetails.css
@@ -7,7 +7,7 @@
   padding: 20px;
   box-sizing: border-box;
 }
-.top-trailer {
+.trailer {
   width: 100%;
   cursor: pointer;
 }
@@ -43,31 +43,17 @@
   font-size: 18.5px;
   padding: 30px 0px 0px 10px;
 }
-.casts {
-  padding-bottom: 10px;
-}
-.casts .cast-name {
-  color: #bf123d;
-  padding: 0px 10px;
-  font-weight: 500;
-}
-.top-rated img {
-  width: 650px;
-  cursor: pointer;
-  padding: 20px 0px 0px 10px;
-}
 .bottom-right img {
   width: 100%;
   padding: 10px 0px;
   cursor: pointer;
 }
 
-
 @media (max-width: 1024px) {
   .movies {
     width: 80%;
   }
-  .top-trailer {
+  .trailer {
     width: 100%;
   }
   .bottom-left {
@@ -96,28 +82,18 @@
 
 @media (max-width: 768px) {
   .movies {
-  padding: 10px;
-}
+    padding: 10px;
+  }
   .bottom-left {
     width: 100%;
   }
   .trailer-info {
     padding: 5px 10px 10px 0px;
   }
-  .trailer-info span {
-    padding: 0px 5px;
-    font-size: 10px;
-  }
-  .trailer-info .button {
-    display: none;
-  }
   .trailer-info p {
     width: 100%;
     font-size: 12px;
     padding: 10px 0px 0px 10px;
-  }
-  .top-rated img {
-    width: 100%;
   }
   .bottom-right img {
     width: 100%;
